--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Scissor Paper Game</title>
-    <script src="index.js"></script>
-</head>
-<body>
-    
-</body>
+    <script src="index.js" defer></script>
+  </head>
+  <body>
+    <button id="btnRock">Rock</button>
+    <button id="btnScissor">Scissor</button>
+    <button id="btnPaper">Paper</button>
+    <div class="result"></div>
+  </body>
 </html>
